--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,7 +23,8 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements/base.txt
+          pip install -r requirements/production.txt
       - name: Run Tests
         run: |
           python manage.py test
