--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,6 +25,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements/base.txt
           pip install -r requirements/production.txt
+          pip install -r requirements/local.txt
       - name: Run Tests
         run: |
           python manage.py test
