--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements/base.txt
-          pip install -r requirements/production.txt
-          pip install -r requirements/local.txt
+          pip install --no-cache-dir -r requirements/base.txt
+          pip install --no-cache-dir -r requirements/production.txt
+          pip install --no-cache-dir -r requirements/local.txt
       - name: Run Tests
         run: |
           python manage.py test
