--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -9,8 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
     strategy:
       max-parallel: 4
       matrix:
@@ -26,6 +24,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install  -r requirements/production.txt
+      - name: Set environment variables
+        run: |
+          echo "DJANGO_SETTINGS_MODULE=config.django.local" >> $GITHUB_ENV
+          echo "SECRET_KEY=${{ secrets.DJANGO_SECRET_KEY }}" >> $GITHUB_ENV
       - name: Run Tests
         run: |
           python manage.py test
